ffmpeg: do not call exit from exit_program()

This should fix  Ticket2116

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>